--- a/app/views/pages/_news.html.haml
+++ b/app/views/pages/_news.html.haml
@@ -2,6 +2,28 @@
   %ul.unstyled
 
     %li.news_item
+      %h3 Week 2 Recap
+
+      %p There were no slides from this week.
+
+      %p Read the methods.rb file in the lecture_code folder.
+
+      %p Take a look at the "myapp" Rails application we started.  See if you can remember how we got our webpage to show up at http://localhost:3000/home.
+
+      %p Please do these things this week:
+
+      %ol
+        %li
+          Create a "fork" of
+          = link_to "Week2", "http://github.com/entr925/week2"
+          \.  The README file has instructions for this week's homework.
+        %li
+          Do chapters 1-9 of the "Learn to Program" book.
+        %li
+          %strong Turn In Your Homework By Friday, April 19th, 11:59pm.
+
+
+    %li.news_item
       %h3 Week 1 Recap
 
       %p Please do these things this week:
