--- a/app/views/pages/_sidebars.html.haml
+++ b/app/views/pages/_sidebars.html.haml
@@ -34,10 +34,15 @@
       %li= link_to "Slate (guru, free)", "http://thume.ca/howto/2012/11/19/using-slate/"
 
   .well
-    %h2 Instructors
+    %h2 Contact Info
+    %p= mail_to 'entr925@breeze123.com', 'Send an Email to the Class Email List'
+
     %p
-      = mail_to "jeffcohen@cs.uchicago.edu", "Jeff Cohen"
+      = mail_to "j-cohen@kellogg.northwestern.edu", "Jeff Cohen"
       (Lecturer)
     %p
       = mail_to 'raghu@starterleague.com', 'Raghu Betina'
+      (TA)
+    %p
+      = mail_to 'jelkin2013@kellogg.northwestern.com', 'Josh Elkin'
       (TA)
