--- a/app/views/pages/_news.html.haml
+++ b/app/views/pages/_news.html.haml
@@ -2,6 +2,32 @@
   %ul.unstyled
 
     %li.news_item
+      %h3 Week 3 Recap
+
+      %p
+        =link_to "Slides from this week", slides_url(:spring2013, 3)
+        are also in the sidebar for future reference.
+
+      %p
+        Read the first two pages of the
+        = link_to "RCAV and Model Basics PDF", "/rcav-model-basics.pdf"
+        in the sidebar.  It also includes a peek ahead to working with Rails models for next time.
+
+      %p Clone the Week3 repository from Github and review the "myapp" Rails application we started.  See if you can remember how we got our webpage to show up at http://localhost:3000/idcards.  Break the code to discover new error messages, then fix the code to make it work again.
+
+      %p Please do these things this week:
+
+      %ol
+        %li
+          Create a "fork" of
+          = link_to "Week3", "http://github.com/entr925/week3"
+          \.  The README file has instructions for this week's homework.
+        %li
+          Do chapters 1-9 of the "Learn to Program" book if you haven't already.
+        %li
+          %strong Turn In Your Homework By Friday, April 26th, 11:59pm.
+
+    %li.news_item
       %h3 Week 2 Recap
 
       %p There were no slides from this week.
