--- a/app/views/pages/_sidebars.html.haml
+++ b/app/views/pages/_sidebars.html.haml
@@ -5,6 +5,7 @@
 
     %h3 class content
     %ul
+      %li= link_to "Slides from Week 3", slides_url(:spring2013, 3)
       %li= link_to "Slides from Week 1", slides_url(:spring2013, 1)
 
     %h3 important resources
@@ -14,7 +15,7 @@
       / %li= link_to "Model Associations Summary Sheets", "/model_associations.pdf"
       / %li= link_to "Final Project Assignment", "/final_project.pdf"
       / %li= link_to "Quick Review for Weeks 1-4", "/weeks1-4.pdf"
-      / %li= link_to "RCAV and Model Basics PDF", "/rcav-model-basics.pdf"
+      %li= link_to "RCAV and Model Basics PDF", "/rcav-model-basics.pdf"
       / %li= link_to "Q&A via Piazza", piazza_url
       %li= link_to "How to Do The Homework", '/spring2013/homework.pdf', target: '_blank'
       %li= link_to "Course Syllabus", syllabus_path(:spring2013), target: '_blank'
