--- a/app/views/pages/_sidebars.html.haml
+++ b/app/views/pages/_sidebars.html.haml
@@ -15,6 +15,7 @@
       / %li= link_to "Model Associations Summary Sheets", "/model_associations.pdf"
       / %li= link_to "Final Project Assignment", "/final_project.pdf"
       / %li= link_to "Quick Review for Weeks 1-4", "/weeks1-4.pdf"
+      %li= link_to "Models and Routes", "/models_and_routes.pdf"
       %li= link_to "RCAV and Model Basics PDF", "/rcav-model-basics.pdf"
       / %li= link_to "Q&A via Piazza", piazza_url
       %li= link_to "How to Do The Homework", '/spring2013/homework.pdf', target: '_blank'
