--- a/app/views/pages/_news.html.haml
+++ b/app/views/pages/_news.html.haml
@@ -2,6 +2,26 @@
   %ul.unstyled
 
     %li.news_item
+      %h3 Week 6 Recap
+
+      %p
+        Here are the two main ideas we've covered:
+
+      %p
+        1. Querystring parameters are key-value pairs that can appear afte a question mark in the url.  Any querystring parameters in the url get mapped into the
+        %code params
+        hash.
+
+      %p
+        2. We can use foreign keys (integer columns) to keep track of model associations.  Rails also provides the
+        %code belongs_to
+        and
+        %code has_many
+        methods to help you navigate among associated models.
+
+      %p There are lots of new links in the sidebar, including one for the final project requirements.  Check them out!
+
+    %li.news_item
       %h3 Weeks 4 & 5 Recap
 
       %p
