--- a/app/views/pages/_sidebars.html.haml
+++ b/app/views/pages/_sidebars.html.haml
@@ -12,8 +12,10 @@
     %ul
       / %li= link_to "Sign in with Twitter", "/oauth_twitter.pdf"
       / %li= link_to "Javascript, jQuery, and Ajax Cheat Sheets", "/javascript.pdf"
-      / %li= link_to "Model Associations Summary Sheets", "/model_associations.pdf"
-      / %li= link_to "Final Project Assignment", "/final_project.pdf"
+      %li= link_to "Rails Routing Conventions", "/spring2013/restful_routes.pdf"
+      %li= link_to "How to Use Named Routes", "/spring2013/named-routes.pdf"
+      %li= link_to "Model Associations Summary Sheets", "/model_associations.pdf"
+      %li= link_to "Final Project Assignment", "/final_project.pdf"
       / %li= link_to "Quick Review for Weeks 1-4", "/weeks1-4.pdf"
       %li= link_to "Models and Routes", "/models_and_routes.pdf"
       %li= link_to "RCAV and Model Basics PDF", "/rcav-model-basics.pdf"
