--- a/app/views/pages/_sidebars.html.haml
+++ b/app/views/pages/_sidebars.html.haml
@@ -10,7 +10,8 @@
 
     %h3 important resources
     %ul
-      / %li= link_to "Sign in with Twitter", "/oauth_twitter.pdf"
+      %li= link_to "Secure User Accounts", "/user_accounts.pdf"
+      %li= link_to "Sign in with Twitter", "/oauth_twitter.pdf"
       / %li= link_to "Javascript, jQuery, and Ajax Cheat Sheets", "/javascript.pdf"
       %li= link_to "Rails Routing Conventions", "/spring2013/restful_routes.pdf"
       %li= link_to "How to Use Named Routes", "/spring2013/named-routes.pdf"
